MOSIP-37256: update the readme file - develop
Signed-off-by: nagendra0721 <nagendra0718@gmail.com>