@@ -1,134 +1,123 @@
 # Mock Manual Verification (MV)
 
-## About
-* This service reads request from queue and mocks response for external "manual adjudication" and "verification" systems.
+## 📌 Overview
+The `mock-mv` service simulates the Manual Verification (MV) component in MOSIP. It reads requests from a queue and provides mock responses for external "manual adjudication" and "verification" systems. This is useful for testing registration processor flows without connecting to actual manual verification systems.
 
-## Table of Contents
-	Prerequisites
-	Setting Up Locally
-	Running the Application
-	Configurations
-	APIs Provided
+## ✨ Features
+-   **MV Simulation**: Simulates the decision-making process of Manual Verification (Approved/Rejected).
+-   **Queue Integration**: Consumes verification requests from ActiveMQ and publishes responses.
+-   **Configurable Expectations**: Allows setting up specific decisions (APPROVED/REJECTED) and response delays via API.
+-   **Swagger Interface**: Provides a user-friendly interface to configure mock behavior.
 
-### Prerequisites
-	Ensure you have the following installed before proceeding:
+## 🛠️ Services
+-   **mock-mv-service**: The core service that processes verification requests and manages mock logic.
 
-	Java: Version 21.0.3
-	Maven: For building the project
-	Git: To clone the repository
-	Postman (optional): For testing the APIs
+## ⚙️ Local Setup
+There are two primary ways to deploy the `mock-mv` module locally:
+1.  **[Local Setup using Docker Image](#local-setup-using-docker-image)**: Recommended for consistent environment setup.
+2.  **[Local Setup by Building Docker Image](#local-setup-by-building-docker-image)**: If you need to build from source.
+3.  **[Local Setup (JAR)](#local-setup-using-jar)**: Useful for development and debugging.
 
-### Server deployment (for sandbox deployment)
-	Docker based
-	
-	Steps:
-	* Go to REPO_ROOT/mock-mv.
-	* Build the code: `mvn clean install -Dgpg.skip=true`.
-	* Create a docker image: docker build . --file Dockerfile --tag mock-abis.
-	* Push the docket image to docker registry. You can directly use these images for running mock ABIS.
-	
-	**Please check Dockerfile for passing env properties**
-	
-	Swagger url: `https://<hostname>/v1/mockmv/swagger-ui.html#/`
+## 📋 Pre requisites
+Before setting up the project, ensure you have the following prerequisites:
+-   **Java 21**: The project requires Java 21.0.3 or later.
+-   **Maven**: For building the project.
+-   **Docker**: For containerized deployment.
+-   **ActiveMQ**: A local or remote ActiveMQ instance is required for queue operations.
+-   **Git**: To clone the repository.
 
-## APIs for configuration and expectation setting
+## 🗄️ Database Setup
+-   **Not Applicable**: This module does not use a standalone database for persistence; it primarily operates using in-memory configurations and message queues.
 
-### Update configuration
+## 📝 Configurations
+The service connects to ActiveMQ and other internal components.
+-   **ActiveMQ Configuration**:
+    You may need to configure ActiveMQ connection details in `application.properties` or via environment variables if not using default local settings.
+-   **Mock Decision**:
+    The default decision can be configured via API or properties (`mock.mv.decision`).
 
-Url: http://{host}/v1/mockmv/config/configureMockMv
+## 🐳 Local Setup using docker image
+To run using an existing Docker image (if available in your registry):
+1.  Run the following command:
+    ```bash
+    docker run -p 8081:8081 mock-mv
+    ```
+    *(Note: Ensure ActiveMQ is running and reachable).*
 
-Method: POST
+## 🏗️ Local Setup by building docker image
+To build the image locally and run:
+1.  **Build the Project**:
+    ```bash
+    mvn clean install -Dgpg.skip=true
+    ```
+2.  **Build Docker Image**:
+    ```bash
+    docker build --file Dockerfile --tag mock-mv .
+    ```
+3.  **Run Container**:
+    ```bash
+    docker run -p 8081:8081 mock-mv
+    ```
 
-Request:
-```json
-{
-  "mockMvDescision": "APPROVED"
-}
-```
+## ☕ Local Setup using JAR
+Recommended for active development.
+1.  **Build**:
+    ```bash
+    mvn clean install -Dgpg.skip=true
+    ```
+2.  **Run**:
+    ```bash
+    java -XX:-UseG1GC -XX:-UseParallelGC -XX:-UseShenandoahGC -XX:+ExplicitGCInvokesConcurrent \
+    -XX:+UseZGC -XX:+ZGenerational -XX:+UnlockExperimentalVMOptions -XX:+UseStringDeduplication \
+    -XX:+HeapDumpOnOutOfMemoryError -XX:+UseCompressedOops -XX:MaxGCPauseMillis=200 \
+    -Dfile.encoding=UTF-8 \
+    -Dspring.cloud.config.label="master" \
+    -Dspring.profiles.active="default"  \
+    -Dspring.cloud.config.uri="http://localhost:51000/config" \
+    --add-opens java.xml/jdk.xml.internal=ALL-UNNAMED \
+    --add-opens java.base/java.lang.reflect=ALL-UNNAMED \
+    --add-opens java.base/java.lang.stream=ALL-UNNAMED \
+    --add-opens java.base/java.time=ALL-UNNAMED \
+    --add-opens java.base/java.time.LocalDate=ALL-UNNAMED \
+    --add-opens java.base/java.time.LocalDateTime=ALL-UNNAMED \
+    --add-opens java.base/java.io.Reader=ALL-UNNAMED \
+    --add-opens java.base/java.util.Optional=ALL-UNNAMED \
+    --add-opens java.base/java.time.LocalDateTime.date=ALL-UNNAMED \
+    -jar target/mock-mv-1.3.0-SNAPSHOT.jar
+    ```
+    *(Note: Adjust the JAR version and config URI as needed).*
 
-Response:
-```text
-Successfully updated the configuration
-```
+## 🚀 Deployment
+For deploying in a Kubernetes environment (like Sandbox), the service is deployed as a Docker container. Refer to the specific MOSIP deployment scripts and Helm charts for environmental configuration.
 
-### Get configuration
-Url: http://{host}/v1/mockmv/config/configureMockMv
+## ⬆️ Upgrade
+To upgrade:
+1.  Git pull latest changes.
+2.  Update dependencies in `pom.xml`.
+3.  Rebuild: `mvn clean install`.
+4.  Rebuild Docker image.
 
-Method: GET
+## 📚 Documentation
 
-Response:
-```json
-{
-  "mockMvDescision": "APPROVED"
-}
-```
+### API Documentation
+API endpoints, base URL (repo name), and mock server details are available via Swagger documentation:
+[Swagger UI Local](http://localhost:8081/v1/mockmv/swagger-ui/index.html#/)
 
-### Set Expectation
+### Product Documentation
+For more details on Manual Adjudication integration:
+[MOSIP Documentation](https://docs.mosip.io/1.1.5/modules/registration-processor/deduplication-and-manual-adjudication#manual-adjudication)
 
-Url: http://{host}/v1/mockmv/config/expectationMockMv
+## 🤝 Contribution & Community
+We welcome contributions from everyone!
 
-Method: POST
+[Check here](https://docs.mosip.io/1.2.0/community/code-contributions) to learn how you can contribute code to this application.
 
-Request:
-```json
-{
-  "mockMvDecision": "REJECTED",
-  "delayResponse": 30,
-  "rid": "10332103161016320241119230824"
-}
-```
+If you have any questions or run into issues while trying out the application, feel free to post them in the [MOSIP Community](https://community.mosip.io/) — we’ll be happy to help you out.
 
-Response:
-```text
-Successfully inserted expectation $expectation_id
-```
+[![GitHub Issues](https://img.shields.io/badge/GitHub-Issues-181717?style=flat&logo=github&logoColor=white)](https://github.com/mosip/mosip-mock-services/issues)
 
-### Get Expectations
+## 📝 License
+![License: MPL 2.0](https://img.shields.io/badge/License-MPL_2.0-brightgreen.svg)
 
-Url: http://{host}/v1/mockmv/config/expectationMockMv
-
-Method: GET
-
-Response:
-```json
-{
-  "10332103161016320241119230824": {
-    "mockMvDecision": "REJECTED",
-    "delayResponse": 0,
-    "rid": "10332103161016320241119230824"
-  },
-  "10332103161009120241119230259": {
-    "mockMvDecision": "REJECTED",
-    "delayResponse": 0,
-    "rid": "10332103161009120241119230259"
-  }
-}
-```
-
-### Delete Expectation
-
-Url: http://{host}/v1/mockmv/config/expectation/{id}
-
-Method: DELETE
-
-Response:
-```text
-Successfully deleted expectation $expectation_id
-```
-
-## Configurations
-This section is for the developers, for developing this modules fast & efficiently
-
-1) The configuration `mock.mv.decision` can be changed to "APPROVED" or "REJECTED" to set expected response.
-
-2) ActiveMQ queue need to setup using application.properties:
-
-## APIs
-API documentation is available 
-[here](https://docs.mosip.io/1.1.5/modules/registration-processor/deduplication-and-manual-adjudication#manual-adjudication).
-
-## Deploy
-To deploy Admin on Kubernetes cluster using Dockers refer to [Sandbox Deployment](https://docs.mosip.io/1.2.0/deploymentnew/v3-installation).
-
-## License
 This project is licensed under the terms of [Mozilla Public License 2.0](LICENSE).
+See the [LICENSE](LICENSE) file for full license details.
